--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -22,7 +22,7 @@ jobs:
         run: |
           pacman -Syu --noconfirm
           pacman -S --noconfirm base-devel clang lld llvm cmake wget unzip git \
-          intel-tbb boost fmt nlohmann-json qt5-base
+          intel-tbb boost fmt nlohmann-json qt5-base valgrind
           wget https://github.com/Neargye/magic_enum/archive/v0.6.6.zip
           unzip v0.6.6.zip
           cd magic_enum-0.6.6
@@ -46,7 +46,7 @@ jobs:
       - name: cmake
         env:
           CXX: ${{ matrix.compiler }}
-        run: mkdir build && cd build && cmake -DCOVERAGE=TRUE -DCLANG_TIDY=TRUE ..
+        run: mkdir build && cd build && cmake -DCOVERAGE=TRUE -DCLANG_TIDY=TRUE -DSqlite_Speed_Test=TRUE ..
 
       - name: build
         run: cmake --build build -j4 --target all
