--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -69,7 +69,7 @@ file(MAKE_DIRECTORY ${TEST_BINARY_DIR})
 set(TEST_OBJ_DIR ${CMAKE_BINARY_DIR}/objs)
 file(MAKE_DIRECTORY ${TEST_OBJ_DIR})
 
-add_test(NAME check_kcc_executable COMMAND ${PROGRAM_NAME} -help)
+add_test(NAME check_PROGRAM_NAME COMMAND ${PROGRAM_NAME} -help)
 
 add_test(NAME COMPILE--testmain
          COMMAND ${PROGRAM_NAME} ${CMAKE_SOURCE_DIR}/test/usual/testmain.c -O0
@@ -109,71 +109,99 @@ foreach(USUAL_FILE ${USUAL_FILES})
 
 endforeach()
 
-# add_test( NAME "COMPILE--8CC" COMMAND ${KCC_EXECUTABLE}
-# ${CMAKE_SOURCE_DIR}/test/8cc/*.c -O0 -g -std=gnu17
-# -DBUILD_DIR=\"${CMAKE_SOURCE_DIR}/test/8cc\" -o ${TEST_BINARY_DIR}/8cc)
-# add_test(NAME check_8cc_executable COMMAND ${TEST_BINARY_DIR}/8cc -h)
-#
-# add_test( NAME "COMPILE--8CC--OPT" COMMAND ${KCC_EXECUTABLE}
-# ${CMAKE_SOURCE_DIR}/test/8cc/*.c -O3 -std=gnu17
-# -DBUILD_DIR=\"${CMAKE_SOURCE_DIR}/test/8cc\" -o ${TEST_BINARY_DIR}/8cc_opt)
-# add_test(NAME check_8cc_opt_executable COMMAND ${TEST_BINARY_DIR}/8cc_opt -h)
-#
-# set(TEST_OBJ_DIR ${CMAKE_BINARY_DIR}/objs) file(MAKE_DIRECTORY
-# ${TEST_OBJ_DIR}) aux_source_directory(${CMAKE_SOURCE_DIR}/test/8cc 8CC_FILES)
-#
-# foreach(8CC_FILE ${8CC_FILES}) get_filename_component(8CC_FILE_NAME
-# ${8CC_FILE} NAME_WE)
-#
-# add_test( NAME "COMPILE--${8CC_FILE_NAME}_8cc" COMMAND ${TEST_BINARY_DIR}/8cc
-# ${8CC_FILE} -DBUILD_DIR=\"${CMAKE_SOURCE_DIR}/test/8cc\" -c -o
-# ${TEST_OBJ_DIR}/${8CC_FILE_NAME}.o)
-#
-# add_test( NAME "COMPILE--${8CC_FILE_NAME}_8cc_opt" COMMAND
-# ${TEST_BINARY_DIR}/8cc_opt ${8CC_FILE}
-# -DBUILD_DIR=\"${CMAKE_SOURCE_DIR}/test/8cc\" -c -o
-# ${TEST_OBJ_DIR}/${8CC_FILE_NAME}.o) endforeach()
-#
-# add_test( NAME "COMPILE--LUA" COMMAND ${KCC_EXECUTABLE}
-# ${CMAKE_SOURCE_DIR}/test/lua/*.c -O0 -g -std=gnu17 -DLUA_USER_H=\"ltests.h\"
-# -DLUA_USE_LINUX -DLUA_COMPAT_5_2 -ldl -lreadline -lm -o
-# ${TEST_BINARY_DIR}/lua) add_test(NAME check_lua_executable COMMAND
-# ${TEST_BINARY_DIR}/lua -v)
-#
-# add_test( NAME "COMPILE--LUA--OPT" COMMAND ${KCC_EXECUTABLE}
-# ${CMAKE_SOURCE_DIR}/test/lua/*.c -O3 -std=gnu17 -DLUA_USER_H=\"ltests.h\"
-# -DLUA_USE_LINUX -DLUA_COMPAT_5_2 -ldl -lreadline -lm -o
-# ${TEST_BINARY_DIR}/lua_opt) add_test(NAME check_lua_opt_executable COMMAND
-# ${TEST_BINARY_DIR}/lua_opt -v)
-#
-# add_test( NAME lua_test COMMAND ${TEST_BINARY_DIR}/lua
-# ${CMAKE_SOURCE_DIR}/test/lua/testes/all.lua WORKING_DIRECTORY
-# ${CMAKE_SOURCE_DIR}/test/lua/testes)
-#
-# add_test( NAME lua_test_opt COMMAND ${TEST_BINARY_DIR}/lua_opt
-# ${CMAKE_SOURCE_DIR}/test/lua/testes/all.lua WORKING_DIRECTORY
-# ${CMAKE_SOURCE_DIR}/test/lua/testes)
-#
-# add_test( NAME "COMPILE--SQLITE" COMMAND ${KCC_EXECUTABLE}
-# ${CMAKE_SOURCE_DIR}/test/sqlite/shell.c
-# ${CMAKE_SOURCE_DIR}/test/sqlite/sqlite3.c -o ${TEST_BINARY_DIR}/sqlite -O0 -g
-# -std=gnu17 -lpthread -ldl -lm -DSQLITE_DEFAULT_MEMSTATUS=0 -DSQLITE_DQS=0
-# -DSQLITE_ENABLE_DBSTAT_VTAB -DSQLITE_ENABLE_FTS5 -DSQLITE_ENABLE_GEOPOLY
-# -DSQLITE_ENABLE_JSON1 -DSQLITE_ENABLE_RBU -DSQLITE_ENABLE_RTREE
-# -DSQLITE_LIKE_DOESNT_MATCH_BLOBS -DSQLITE_MAX_EXPR_DEPTH=0
-# -DSQLITE_OMIT_DECLTYPE -DSQLITE_OMIT_DEPRECATED -DSQLITE_USE_ALLOCA
-# -DSQLITE_ENABLE_MEMSYS5) add_test(NAME check_sqlite_executable COMMAND
-# ${TEST_BINARY_DIR}/sqlite -version)
-#
-# add_test( NAME "COMPILE--SQLITE--OPT" COMMAND ${KCC_EXECUTABLE}
-# ${CMAKE_SOURCE_DIR}/test/sqlite/shell.c
-# ${CMAKE_SOURCE_DIR}/test/sqlite/sqlite3.c -o ${TEST_BINARY_DIR}/sqlite_opt -O3
-# -std=gnu17 -lpthread -ldl -lm -DNDEBUG -DSQLITE_DEFAULT_MEMSTATUS=0
-# -DSQLITE_DQS=0 -DSQLITE_ENABLE_DBSTAT_VTAB -DSQLITE_ENABLE_FTS5
-# -DSQLITE_ENABLE_GEOPOLY -DSQLITE_ENABLE_JSON1 -DSQLITE_ENABLE_RBU
-# -DSQLITE_ENABLE_RTREE -DSQLITE_LIKE_DOESNT_MATCH_BLOBS
-# -DSQLITE_MAX_EXPR_DEPTH=0 -DSQLITE_OMIT_DECLTYPE -DSQLITE_OMIT_DEPRECATED
-# -DSQLITE_USE_ALLOCA -DSQLITE_ENABLE_MEMSYS5) add_test(NAME
-# check_sqlite_opt_executable COMMAND ${TEST_BINARY_DIR}/sqlite_opt -version)
+add_test(
+  NAME "COMPILE--8CC"
+  COMMAND
+    ${PROGRAM_NAME} ${CMAKE_SOURCE_DIR}/test/8cc/*.c -O0 -g -std=gnu17
+    -DBUILD_DIR=\"${CMAKE_SOURCE_DIR}/test/8cc\" -o ${TEST_BINARY_DIR}/8cc)
+add_test(NAME check_8cc_executable COMMAND ${TEST_BINARY_DIR}/8cc -h)
+
+add_test(
+  NAME "COMPILE--8CC--OPT"
+  COMMAND
+    ${PROGRAM_NAME} ${CMAKE_SOURCE_DIR}/test/8cc/*.c -O3 -std=gnu17
+    -DBUILD_DIR=\"${CMAKE_SOURCE_DIR}/test/8cc\" -o ${TEST_BINARY_DIR}/8cc_opt)
+add_test(NAME check_8cc_opt_executable COMMAND ${TEST_BINARY_DIR}/8cc_opt -h)
+
+set(TEST_OBJ_DIR ${CMAKE_BINARY_DIR}/objs)
+file(MAKE_DIRECTORY ${TEST_OBJ_DIR})
+aux_source_directory(${CMAKE_SOURCE_DIR}/test/8cc 8CC_FILES)
+
+foreach(8CC_FILE ${8CC_FILES})
+  get_filename_component(8CC_FILE_NAME ${8CC_FILE} NAME_WE)
+
+  add_test(
+    NAME "COMPILE--${8CC_FILE_NAME}_8cc"
+    COMMAND
+      ${TEST_BINARY_DIR}/8cc ${8CC_FILE}
+      -DBUILD_DIR=\"${CMAKE_SOURCE_DIR}/test/8cc\" -c -o
+      ${TEST_OBJ_DIR}/${8CC_FILE_NAME}.o)
+
+  add_test(
+    NAME "COMPILE--${8CC_FILE_NAME}_8cc_opt"
+    COMMAND
+      ${TEST_BINARY_DIR}/8cc_opt ${8CC_FILE}
+      -DBUILD_DIR=\"${CMAKE_SOURCE_DIR}/test/8cc\" -c -o
+      ${TEST_OBJ_DIR}/${8CC_FILE_NAME}.o)
+endforeach()
+
+add_test(
+  NAME "COMPILE--LUA"
+  COMMAND
+    ${PROGRAM_NAME} ${CMAKE_SOURCE_DIR}/test/lua/*.c -O0 -g -std=gnu17
+    -DLUA_USER_H=\"ltests.h\" -DLUA_USE_LINUX -DLUA_COMPAT_5_2 -ldl -lreadline
+    -lm -o ${TEST_BINARY_DIR}/lua)
+add_test(NAME check_lua_executable COMMAND ${TEST_BINARY_DIR}/lua -v)
+
+add_test(
+  NAME "COMPILE--LUA--OPT"
+  COMMAND
+    ${PROGRAM_NAME} ${CMAKE_SOURCE_DIR}/test/lua/*.c -O3 -std=gnu17
+    -DLUA_USER_H=\"ltests.h\" -DLUA_USE_LINUX -DLUA_COMPAT_5_2 -ldl -lreadline
+    -lm -o ${TEST_BINARY_DIR}/lua_opt)
+add_test(NAME check_lua_opt_executable COMMAND ${TEST_BINARY_DIR}/lua_opt -v)
+
+add_test(
+  NAME lua_test
+  COMMAND ${TEST_BINARY_DIR}/lua ${CMAKE_SOURCE_DIR}/test/lua/testes/all.lua
+  WORKING_DIRECTORY ${CMAKE_SOURCE_DIR}/test/lua/testes)
+
+add_test(
+  NAME lua_test_opt
+  COMMAND ${TEST_BINARY_DIR}/lua_opt ${CMAKE_SOURCE_DIR}/test/lua/testes/all.lua
+  WORKING_DIRECTORY ${CMAKE_SOURCE_DIR}/test/lua/testes)
+
+add_test(
+  NAME "COMPILE--SQLITE"
+  COMMAND
+    ${PROGRAM_NAME} ${CMAKE_SOURCE_DIR}/test/sqlite/shell.c
+    ${CMAKE_SOURCE_DIR}/test/sqlite/sqlite3.c -o ${TEST_BINARY_DIR}/sqlite -O0
+    -g -std=gnu17 -lpthread -ldl -lm -DSQLITE_DEFAULT_MEMSTATUS=0
+    -DSQLITE_DQS=0 -DSQLITE_ENABLE_DBSTAT_VTAB -DSQLITE_ENABLE_FTS5
+    -DSQLITE_ENABLE_GEOPOLY -DSQLITE_ENABLE_JSON1 -DSQLITE_ENABLE_RBU
+    -DSQLITE_ENABLE_RTREE -DSQLITE_LIKE_DOESNT_MATCH_BLOBS
+    -DSQLITE_MAX_EXPR_DEPTH=0 -DSQLITE_OMIT_DECLTYPE -DSQLITE_OMIT_DEPRECATED
+    -DSQLITE_USE_ALLOCA -DSQLITE_ENABLE_MEMSYS5)
+add_test(NAME check_sqlite_executable COMMAND ${TEST_BINARY_DIR}/sqlite
+                                              -version)
+
+add_test(
+  NAME "COMPILE--SQLITE--OPT"
+  COMMAND
+    ${PROGRAM_NAME} ${CMAKE_SOURCE_DIR}/test/sqlite/shell.c
+    ${CMAKE_SOURCE_DIR}/test/sqlite/sqlite3.c -o ${TEST_BINARY_DIR}/sqlite_opt
+    -O3 -std=gnu17 -lpthread -ldl -lm -DNDEBUG -DSQLITE_DEFAULT_MEMSTATUS=0
+    -DSQLITE_DQS=0 -DSQLITE_ENABLE_DBSTAT_VTAB -DSQLITE_ENABLE_FTS5
+    -DSQLITE_ENABLE_GEOPOLY -DSQLITE_ENABLE_JSON1 -DSQLITE_ENABLE_RBU
+    -DSQLITE_ENABLE_RTREE -DSQLITE_LIKE_DOESNT_MATCH_BLOBS
+    -DSQLITE_MAX_EXPR_DEPTH=0 -DSQLITE_OMIT_DECLTYPE -DSQLITE_OMIT_DEPRECATED
+    -DSQLITE_USE_ALLOCA -DSQLITE_ENABLE_MEMSYS5)
+add_test(NAME check_sqlite_opt_executable COMMAND ${TEST_BINARY_DIR}/sqlite_opt
+                                                  -version)
+
+if(${Sqlite_Speed_Test})
+  add_test(NAME sqlite_test
+           COMMAND ${CMAKE_SOURCE_DIR}/test/sqlite/run-speed-test.sh speed)
+endif()
 
 add_custom_target(test_all COMMAND ctest -j1 --output-on-failure)
