--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -2,13 +2,12 @@ name: CI
 
 on:
   push:
-    branches: [ master ]
+    branches: [master]
   pull_request:
-    branches: [ master ]
+    branches: [master]
 
 jobs:
-  build:
-
+  ci:
     runs-on: ubuntu-latest
     container: archlinux
     strategy:
@@ -18,11 +17,11 @@ jobs:
     steps:
       - uses: actions/checkout@v2
 
-      - name: install
+      - name: Install libraries and tools
         run: |
           pacman -Syu --noconfirm
           pacman -S --noconfirm base-devel clang lld llvm cmake wget unzip git \
-          intel-tbb boost fmt nlohmann-json qt5-base valgrind
+          intel-tbb boost fmt nlohmann-json qt5-base
           wget https://github.com/Neargye/magic_enum/archive/v0.6.6.zip
           unzip v0.6.6.zip
           cd magic_enum-0.6.6
@@ -43,29 +42,29 @@ jobs:
           perl Makefile.PL
           make -j4 && make install
 
-      - name: cmake
+      - name: CMake
         env:
           CXX: ${{ matrix.compiler }}
         run: mkdir build && cd build && cmake -DCOVERAGE=TRUE -DCLANG_TIDY=TRUE ..
 
-      - name: build
+      - name: Build
         run: cmake --build build -j4 --target all
 
-      - name: test
+      - name: Execute tests
         run: cd build && ctest -j1 --output-on-failure
 
-      - name: install
+      - name: Install
         run: cmake --build build -j4 --target install
 
-      - name: uninstall
+      - name: Uninstall
         run: cmake --build build -j4 --target uninstall
 
-      - name: coverage
+      - name: Gather coverage data
         run: cmake --build build -j4 --target coverage
 
-      - name: coveralls
+      - name: Codecov upload
         if: ${{ matrix.compiler == 'g++' }}
-        uses: coverallsapp/github-action@master
+        uses: codecov/codecov-action@v1
         with:
-          github-token: ${{ secrets.GITHUB_TOKEN }}
-          path-to-lcov: build/coverage.info
+          file: build/coverage.info
+          fail_ci_if_error: true
