--- a/.vscode/extensions.json
+++ b/.vscode/extensions.json
@@ -1,13 +1,12 @@
 {
   "recommendations": [
+    "ms-vscode.cpptools",
     "amiralizadeh9480.cpp-helper",
     "matepek.vscode-catch2-test-adapter",
-    "llvm-vs-code-extensions.vscode-clangd",
     "twxs.cmake",
     "ms-vscode.cmake-tools",
     "cheshirekow.cmake-format",
-    "vadimcn.vscode-lldb",
-    "ajshort.include-autocomplete",
-    "zxh404.vscode-proto3"
+    "cschlosser.doxdocgen",
+    "surajbarkale.ninja"
   ]
 }
