--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,7 +1,7 @@
 {
   "cmake.configureArgs": [
-    "-DKCC_BUILD_COVERAGE=ON",
-    "-DKCC_FORMAT=ON",
+    "-DKCC_BUILD_ALL=ON",
+    "-DKCC_FORMAT=ON"
     //"-DKCC_SANITIZER=Address;Undefined"
   ]
 }
